Adicionado marcação HTML básica dos elementos da pagina

--- a/index.html
+++ b/index.html
@@ -1,2 +1,24 @@
 <!doctype html>
-<html:
+<html lang="pt">
+
+<head>
+  <meta charset="utf-8">
+  <title>Prova de conceito de formatador ABNT</title>
+  <link rel="stylesheet" href="estilo.css">
+</head>
+
+<body>
+  <main>
+    <article>
+      <section id="instituicao" contenteditable="true">Aqui o seu titulo do melhor TCC da sua faculdade!</section>
+      <section id="nomes" contenteditable="true">Fulano da Silva Junior</section>
+      <section id="titulo" contenteditable="true">Aqui o seu titulo do melhor TCC da sua faculdade!</section>
+      <section id="subtitulo" contenteditable="true">Aqui é o subtitulo do seu TCC</section>
+      <section id="local" contenteditable="true">Local</section>
+      <section id="ano" contenteditable="true">2017</section>
+    </article>
+  </main>
+  <script src="app.js"></script>
+</body>
+
+</html>
