Estilização minima com CSS

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 
 <body>
   <main>
-    <article>
+    <article id="capa" class="pagina"> 
       <section id="instituicao" contenteditable="true">Aqui o seu titulo do melhor TCC da sua faculdade!</section>
       <section id="nomes" contenteditable="true">Fulano da Silva Junior</section>
       <section id="titulo" contenteditable="true">Aqui o seu titulo do melhor TCC da sua faculdade!</section>
       <section id="subtitulo" contenteditable="true">Aqui é o subtitulo do seu TCC</section>
-      <section id="local" contenteditable="true">Local</section>
+      <section id="local" contenteditable="true" style="padding-bottom: 0">Local</section>
       <section id="ano" contenteditable="true">2017</section>
     </article>
   </main>
