Estilização melhorada para impressão, ja com ajustes mínimos
Adicionado também como referencia snippet de CSS para pagina A4
 Muito obrigada!
http://stackoverflow.com/questions/16649943/css-to-set-a4-paper-size

--- a/index.html
+++ b/index.html
@@ -9,13 +9,23 @@
 
 <body>
   <main>
-    <article id="capa" class="pagina"> 
-      <section id="instituicao" contenteditable="true">Aqui o seu titulo do melhor TCC da sua faculdade!</section>
-      <section id="nomes" contenteditable="true">Fulano da Silva Junior</section>
-      <section id="titulo" contenteditable="true">Aqui o seu titulo do melhor TCC da sua faculdade!</section>
-      <section id="subtitulo" contenteditable="true">Aqui é o subtitulo do seu TCC</section>
-      <section id="local" contenteditable="true" style="padding-bottom: 0">Local</section>
-      <section id="ano" contenteditable="true">2017</section>
+    <article id="capa" class="pagina">
+      <div class="pagina-areautil">
+        <div class="capa-g1">
+          <section id="instituicao" contenteditable="true">Aqui o seu titulo do melhor TCC da sua faculdade!</section>
+        </div>
+        <div class="capa-g2">
+          <section id="nomes" contenteditable="true">Fulano da Silva Junior</section>
+        </div>
+        <div class="capa-g3">
+          <section id="titulo" contenteditable="true">Aqui o seu titulo do melhor TCC da sua faculdade!</section>
+          <section id="subtitulo" contenteditable="true">Aqui é o subtitulo do seu TCC</section>
+        <div>
+        <div class="capa-g4">
+          <section id="local" contenteditable="true" style="padding-bottom: 0">Local</section>
+          <section id="ano" contenteditable="true">2017</section>
+        <div>
+      </div>
     </article>
   </main>
   <script src="app.js"></script>
