Produto mínimo viavel da prova de conceito
+ Logica de funcionamento em JavaScript
^ Limpeza de CSS; removido estios de teste
+ Documentado da prova de conceito

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <section id="subtitulo" contenteditable="true">Aqui é o subtitulo do seu TCC</section>
         <div>
         <div class="capa-g4">
-          <section id="local" contenteditable="true" style="padding-bottom: 0">Local</section>
+          <section id="local" contenteditable="true">Local</section>
           <section id="ano" contenteditable="true">2017</section>
         <div>
       </div>
